# DeviceAccess-PythonBindings

./: .gitignore  .jenkinsfile  CMakeLists.txt  CreateDevice.cc  DevBaseWrapper.cc  DevBaseWrapper.h  DeviceAccess.cc  DeviceFactory.cc  DeviceFactory.h  GetDevice.cc  HelperFunctions.cc  HelperFunctions.h  MtcaMappedDevicePython.cc  MultiplexedDataAccessorWrapper.cc  MultiplexedDataAccessorWrapper.h  MuxDataAccessor.cc  NumpyObjectManager.h  PythonDevice.h  PythonDeviceWrapper.h  PythonExceptions.h  PythonInterface.cc  PythonInterface.h  PythonInterfaceWrapper.h  PythonModuleMethods.cc  PythonModuleMethods.h  README.md  Register.cc  RegisterAccessor.cc  RegisterAccessorWrapperFunctions.cc  RegisterAccessorWrapperFunctions.h  SimpleFactory.cc  SimpleFactory.h  WrapperMethods.cc  WrapperMethods.h  devBaseAdapter.cc  devBaseAdapter.h  devBaseFactory.cc  devBaseFactory.h  devMapAdapter.cc  devMapAdapter.h  (+11 more)
cmake/: Config.cmake.in  ConfigVersion.cmake.in  Findmtca4uPy.cmake  Makefile.coverage.in  conf.py.in  install_debian_package_at_DESY.sh.in  make_debian_package.sh.in  mtca4uPyConfig.cmake.in.in  prepare_debian_package.cmake  runStubgen.sh.in  versionnumbers.py.in
cmake/Modules/: FindSphinx.cmake  Findmtca4uPy.cmake  helperMacros.cmake  prepare_debian_package.cmake  pythonBindingHelperMacros.cmake
cmake/debian_package_templates/: control.in  copyright  copyright.in  install  package-dev.install.in  package.install.in  pkg.install.in  rules
doc/: api_reference.rst  conf.py.in  deviceaccess.rst  examples.rst  faq.rst  getting_started.rst  index.rst  matlab.rst  mtca4u.rst  overview.rst  troubleshooting.rst  user_guide.rst
include/: Device.h  GeneralAccessor.h  HelperFunctions.h  PyDataConsistencyGroup.h  PyDataType.h  PyDevice.h  PyOneDRegisterAccessor.h  PyReadAnyGroup.h  PyScalarRegisterAccessor.h  PyTransferElement.h  PyTransferGroup.h  PyTwoDRegisterAccessor.h  PyVersionNumber.h  PyVoidRegisterAccessor.h  PythonExceptions.h  PythonModuleMethods.h  RegisterCatalogue.h  VersionNumber.h  VoidAccessor.h
mtca4u/: pyproject.toml
mtca4u/mtca4u/: __init__.py
mtca4u_/: README.md  pyproject.toml
src/: CreateDevice.cc  DeviceAccess.cc  HelperFunctions.cc  PyDataConsistencyGroup.cc  PyDataType.cc  PyDevice.cc  PyOneDRegisterAccessor.cc  PyReadAnyGroup.cc  PyScalarRegisterAccessor.cc  PyTransferElement.cc  PyTransferGroup.cc  PyTwoDRegisterAccessor.cc  PyVersionNumber.cc  PyVoidRegisterAccessor.cc  PythonDevice.cc  PythonModuleMethods.cc  Register.cc  RegisterCatalogue.cc  VersionNumber.cc  VoidAccessor.cc  deviceaccessPython.cc  jupytertest.ipynb
src/deviceaccess/: __init__.py
src/mtca4u/: __init__.py
tests/: test.py  testAccessors.py  testConvenienceFunctions.py  testDeviceAccessLib.py  testDeviceReadWrite.py  testDocExamples.py  testDummyDevice.py  testGroups.py  testHelperFunctions.py  testMappedDummyDevice.py  testMappedPCIEDevice.py  testModule.cpp  testMtca4upy.py  testMyModule.py  testOneDRegisterAccessor.py  testOpeningException.py  testPCIEDevice.py  testPushType.py  testPyBindings.py  testRegisterCatalogue.py  testScalarAccessor.py  testScalarRegisterAccessor.py  testTwoDRegisterAccessor.py
tests/backend/: CMakeLists.txt  VariantTypes.h  backend.cc  backend.h  backend_registration.cc  backend_registration.h  new_class.cc  new_class.h  register.cc  register.h  register_access.cc  register_access.h  register_list.cc  register_list.h  test_accessor.h  test_catalogue.h  variant_types.h  view.cc
tests/backend/cmake/: TestBackend.dmap.in  registerTests.cmake
tests/backend/tests/: CMakeLists.txt  testDBase.cc  testDBaseElem.cc  testRegisterList.cc  test_Register.cc  test_new.cc
tests/deviceInformation/: NumDev.map  exampleCrate.dmap  modular_mtcadummy.map  mtcadummy.map  push.dmap  push.xlmap  testCrate.dmap  test_card.map
tests/documentationExamples/: someCrate.dmap  someDummyModule.map
tests/mapfiles/: mtcadummy.map
